--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 # For debugging purposes
-# bevycheck = "0.3.0"
+bevycheck = "0.3.0"
+bevy-inspector-egui = "0.11.0"
 
 [dependencies.bevy]
 version = "0.7.0"
