--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,6 +3,6 @@ use_field_init_shorthand = true
 # The following lines may be uncommented on nightly Rust.
 # Once these features have stabilized, they should be added to the always-enabled options above.
 # unstable_features = true
-imports_granularity = "Module"
+imports_granularity = "Crate"
 wrap_comments = true
 normalize_comments = true
