deps: add mp3 feature to bevy
Temporary, until I get an official ogg file for the final soundtrack. (The demos are mp3s.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,5 +31,6 @@ features = [
     # File formats
     "png",
     "vorbis",
+    "mp3", # For demos, disable later
     "wav", # Might disable later
 ]
